<resources>
    <string name="app_name">İdeal  Kilo</string>
    <string name="i_have_account">Hesabım var</string>
    <string name="yeni_hesap">Yeni Hesap Oluştur</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kayit_ol">Kayıt ol</string>
    <string name="isim">İsim</string>
    <string name="e_mail">E-mail</string>
    <string name="sifre">Şifre</string>
    <string name="boy">Boy</string>
    <string name="durum">Durum</string>
    <string name="ideal_kilo">İdeal Kilo</string>
    <string name="kadin">Kadın</string>
    <string name="erkek">Erkek</string>
    <string name="_50_kg">50 kg</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="kilo">Kilo</string>
    <string name="kadın">Kadın</string>
    <string name="zayif">Zayıf durumdasınız.</string>
    <string name="ideal">İdeal kilodasınız.</string>
    <string name="normalden_fazla">Normal kilodan fazla.</string>
    <string name="fazla_kilolu">Fazla kilo</string>
    <string name="obez">Obez durumdasınız.</string>
    <string name="doktora">Doktorunuzla görüşmelisiniz.</string>
    <string name="profil">Profil</string>
    <string name="hakkinda">Hakkında</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="app_namee">İdeal Kilo</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="e_maill">E-Mail</string>
    <string name="password">Şifre</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="hazirlayan">UYGULAMAYI HAZIRLAYAN : Cennet AKAL</string>
    <string name="iletisim">İLETİŞİM : cennetakall@gmail.com</string>
    <string name="cikis">Çıkış Yap</string>
</resources>