<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarRegister" />


    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kayit_ol"
        android:textColor="@android:color/black"
        android:layout_below="@+id/actionbarRegister"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/txtUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo1"
        android:hint="@string/user_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/txtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsernameRegister"
        android:hint="@string/e_maill"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/txtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailRegister"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kayit_ol"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:background="#6A109A"
        android:textColor="@android:color/white"/>

</RelativeLayout>