<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.idealkilo.WelcomeActivity"
    android:background="#6A109A"
    android:padding="20dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtWelcomeAppName"
        android:src="@drawable/kilo"/>

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFBB86FC"
        android:text="@string/i_have_account"
        android:textColor="@android:color/white"
        app:iconTint="#040404"
        android:layout_above="@id/btnWelcomeRegister"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="#FFBB86FC"
        android:text="@string/yeni_hesap"
        android:textColor="@color/white"
        />

</RelativeLayout>