<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <include
        android:id="@+id/actionbarLogin"
        layout="@layout/actionbar_app" />
    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giris_yap"
        android:textColor="@android:color/black"
        android:layout_below="@+id/actionbarLogin"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo1"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailLogin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris_yap"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:background="#6A109A"
        android:textColor="@android:color/white"/>

</RelativeLayout>